--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-jasmine": "~0.6.1",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-compass": "^0.7.2"
   }
 }
