--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "grunt": "^0.4.2",
+    "grunt": "^0.4.4",
     "grunt-bower-task": "~0.3.4",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jasmine": "~0.6.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-jasmine": "~0.6.3",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2"
   }
